@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="ohm.quickdice"
-	android:versionCode="36"
-	android:versionName="2.1.1"
+	android:versionCode="37"
+	android:versionName="2.1.1.1"
 	android:installLocation="auto"
 	>
 
